# user-contacts/public/docs/openapi.yaml
@@ -1,211 +1,12 @@
 openapi: 3.0.3
 info:
-  title: Laravel
-  description: ''
+  title: 'Sistema de Agenda de Contatos'
+  description: 'O Sistema de Agenda de Contatos é uma aplicação desenvolvida em API, utilizando o framework Laravel, que permite aos usuários autenticados gerenciar seus contatos de forma eficiente. O objetivo é fornecer as operações básicas de criação, leitura, atualização e exclusão (CRUD) para os contatos da agenda.'
   version: 1.0.0
 servers:
   -
-    url: 'http://localhost:8000'
+    url: 'http://localhost:8000/api'
 paths:
-  /api/contacts:
-    get:
-      summary: 'Busca todos os contatos do usuário logado com paginação.'
-      operationId: buscaTodosOsContatosDoUsurioLogadoComPaginao
-      description: ''
-      parameters:
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {token}'
-          schema:
-            type: string
-      responses:
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
-      tags:
-        - Endpoints
-      security: []
-    post:
-      summary: 'Insere um novo contato para o usuário logado.'
-      operationId: insereUmNovoContatoParaOUsurioLogado
-      description: ''
-      parameters:
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {token}'
-          schema:
-            type: string
-      responses: {  }
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  description: 'Nome do contato.'
-                  example: João
-                second_name:
-                  type: string
-                  description: 'Must be at least 3 characters. Must not be greater than 100 characters.'
-                  example: nrpixskvyvannyhashkmwqsd
-                email:
-                  type: string
-                  description: 'Email do contato.'
-                  example: joaosilva@teste.com
-                number:
-                  type: string
-                  description: 'Número do contato.'
-                  example: (11)999999999
-                secondName:
-                  type: string
-                  description: 'Nome do contato.'
-                  example: Silva
-              required:
-                - name
-                - email
-                - number
-      security: []
-  '/api/contacts/{id}':
-    get:
-      summary: 'Busca um contato do usuário logado.'
-      operationId: buscaUmContatoDoUsurioLogado
-      description: ''
-      parameters:
-        -
-          in: query
-          name: id
-          description: 'Id do contato.'
-          example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
-          required: true
-          schema:
-            type: string
-            description: 'Id do contato.'
-            example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {token}'
-          schema:
-            type: string
-      responses:
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
-      tags:
-        - Endpoints
-      security: []
-    put:
-      summary: 'Atualiza um contato do usuário logado.'
-      operationId: atualizaUmContatoDoUsurioLogado
-      description: ''
-      parameters:
-        -
-          in: query
-          name: id
-          description: 'Id do contato.'
-          example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
-          required: true
-          schema:
-            type: string
-            description: 'Id do contato.'
-            example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {token}'
-          schema:
-            type: string
-      responses: {  }
-      tags:
-        - Endpoints
-      requestBody:
-        required: false
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  description: 'Nome do contato.'
-                  example: João
-                secondName:
-                  type: string
-                  description: 'Nome do contato.'
-                  example: Silva
-                email:
-                  type: string
-                  description: 'Email do contato.'
-                  example: joaosilva@teste.com
-                number:
-                  type: string
-                  description: 'Número do contato.'
-                  example: (11)999999999
-      security: []
-    delete:
-      summary: 'Deleta um contato do usuário logado.'
-      operationId: deletaUmContatoDoUsurioLogado
-      description: ''
-      parameters:
-        -
-          in: query
-          name: id
-          description: 'Id do contato.'
-          example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
-          required: true
-          schema:
-            type: string
-            description: 'Id do contato.'
-            example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
-        -
-          in: header
-          name: Authorization
-          description: ''
-          example: 'Bearer {token}'
-          schema:
-            type: string
-      responses: {  }
-      tags:
-        - Endpoints
-      security: []
-    parameters:
-      -
-        in: path
-        name: id
-        description: 'The ID of the contact.'
-        example: voluptatem
-        required: true
-        schema:
-          type: string
   /api/register:
     post:
       summary: 'Registra um novo usuário.'
@@ -269,34 +70,246 @@ paths:
       security: []
   /api/auth/logout:
     post:
-      summary: ''
-      operationId: postApiAuthLogout
+      summary: 'Faz o logout do usuário.'
+      operationId: fazOLogoutDoUsurio
       description: ''
-      parameters: []
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
       responses: {  }
       tags:
         - Endpoints
-      security: []
   /api/auth/refresh:
     post:
-      summary: ''
-      operationId: postApiAuthRefresh
+      summary: 'Atualiza o token do usuário.'
+      operationId: atualizaOTokenDoUsurio
       description: ''
-      parameters: []
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
       responses: {  }
       tags:
         - Endpoints
-      security: []
   /api/auth/me:
     post:
-      summary: ''
-      operationId: postApiAuthMe
+      summary: 'Retorna os dados do usuário logado.'
+      operationId: retornaOsDadosDoUsurioLogado
       description: ''
-      parameters: []
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
       responses: {  }
       tags:
         - Endpoints
-      security: []
+  /api/contacts:
+    get:
+      summary: 'Busca todos os contatos do usuário logado com paginação.'
+      operationId: buscaTodosOsContatosDoUsurioLogadoComPaginao
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {token}'
+          schema:
+            type: string
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+    post:
+      summary: 'Insere um novo contato para o usuário logado.'
+      operationId: insereUmNovoContatoParaOUsurioLogado
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {token}'
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: 'Nome do contato.'
+                  example: João
+                second_name:
+                  type: string
+                  description: 'Must be at least 3 characters. Must not be greater than 100 characters.'
+                  example: mxtnwvikjppycxfqjdjw
+                email:
+                  type: string
+                  description: 'Email do contato.'
+                  example: joaosilva@teste.com
+                number:
+                  type: string
+                  description: 'Número do contato.'
+                  example: (11)999999999
+                secondName:
+                  type: string
+                  description: 'Nome do contato.'
+                  example: Silva
+              required:
+                - name
+                - email
+                - number
+  '/api/contacts/{id}':
+    get:
+      summary: 'Busca um contato do usuário logado.'
+      operationId: buscaUmContatoDoUsurioLogado
+      description: ''
+      parameters:
+        -
+          in: query
+          name: id
+          description: 'Id do contato.'
+          example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
+          required: true
+          schema:
+            type: string
+            description: 'Id do contato.'
+            example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {token}'
+          schema:
+            type: string
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+    put:
+      summary: 'Atualiza um contato do usuário logado.'
+      operationId: atualizaUmContatoDoUsurioLogado
+      description: ''
+      parameters:
+        -
+          in: query
+          name: id
+          description: 'Id do contato.'
+          example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
+          required: true
+          schema:
+            type: string
+            description: 'Id do contato.'
+            example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {token}'
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: 'Nome do contato.'
+                  example: João
+                secondName:
+                  type: string
+                  description: 'Nome do contato.'
+                  example: Silva
+                email:
+                  type: string
+                  description: 'Email do contato.'
+                  example: joaosilva@teste.com
+                number:
+                  type: string
+                  description: 'Número do contato.'
+                  example: (11)999999999
+    delete:
+      summary: 'Deleta um contato do usuário logado.'
+      operationId: deletaUmContatoDoUsurioLogado
+      description: ''
+      parameters:
+        -
+          in: query
+          name: id
+          description: 'Id do contato.'
+          example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
+          required: true
+          schema:
+            type: string
+            description: 'Id do contato.'
+            example: ecd4f3ff-7e8d-4358-ac74-f997955c7c86
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {token}'
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'The ID of the contact.'
+        example: dicta
+        required: true
+        schema:
+          type: string
 tags:
   -
     name: Endpoints
